[tool.poetry]
name = "adventofcode23"
version = "0.1.0"
description = ""
authors = ["Grant Wasil <grantwasil1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mpip = "^0.1.3"
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
black = "^23.11.0"
pre-commit = "^3.5.0"
flake8 = "^6.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.dev-dependencies]
pre-commit = "^2.12.0"
pytest = "^6.2.3"
black = "^20.8b1"
flakehell = "^0.9.0"
isort = "^5.8.0"

[tool.flakehell]
# https://flakehell.readthedocs.io/
# https://black.readthedocs.io/en/stable/compatible_configs.html?highlight=flake8#flake8
max-line-length = 88
extend-ignore = "E203, W503"
# https://github.com/flakehell/flakehell/issues/10#issuecomment-822720074
extended_default_ignore = []  # add this

[tool.isort]
# https://pycqa.github.io/isort/docs/configuration/black_compatibility/
profile = "black"